Preventing enlarged text in iOS Safari landscape orientation
In iOS 13 landscape orientation, text that has an explicit font size
set does not seem to be enlarged, but text that inherits the font
size from the root <html> element is way too big making the site hard
to read.

In theory this should fix it by preventing WebKit's font enlargement
algorithm from being used?

--- a/wavefile.css
+++ b/wavefile.css
@@ -7,6 +7,8 @@ body {
   font-weight: 300;
   line-height: 1.5rem;
   font-family: "Lato", "Helvetica Neue", Helvetica, arial, sans-serif;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
   background: #fafafa;
 }
 
